[package]
name = "spades-master"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.12"
